[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/sight.tscn" type="PackedScene" id=1]
[ext_resource path="res://code/gun.gd" type="Script" id=2]
[ext_resource path="res://code/gun_eyes.gd" type="Script" id=3]
[ext_resource path="res://models/guns/assault_rifles/a_1/assault_rifle.glb" type="PackedScene" id=4]
[ext_resource path="res://models/magazines/mag_1/mag_1.gltf" type="PackedScene" id=5]

[node name="hand" type="Spatial" groups=["gun"]]
script = ExtResource( 2 )
default_position = Vector3( 0.428, -0.298, -0.694 )
ads_position = Vector3( 0, -0.121, -0.694 )
ray_path = NodePath("gun/RayCast")
muzzle_path = NodePath("gun/muzzle")
case_path = NodePath("gun/case_eject")
timer_path = NodePath("gun/Timer")
hand_path = NodePath(".")
mag_holder_path = NodePath("mag_holder")
gun_drop_path = NodePath("gun/gun_drop")
sway_left = Vector3( 0, 0.1, 0 )
sway_right = Vector3( 0, -0.1, 0 )

[node name="gun" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.534896 )

[node name="muzzle" type="Spatial" parent="gun"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, -0.943723 )

[node name="case_eject" type="Spatial" parent="gun"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0.137331, 0, 0 )

[node name="assault_rifle" parent="gun" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-09, 0, -0.1, 0, 0.1, 0, 0.1, 0, -4.37114e-09, 0, 0, 0 )

[node name="mag_1" parent="gun/assault_rifle" instance=ExtResource( 5 )]

[node name="RayCast" type="RayCast" parent="gun"]
transform = Transform( 1.00888, 0, 0, 0, 1.00888, 0, 0, 0, 1.00888, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -30 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="gun"]
wait_time = 0.2

[node name="Spatial3" type="Spatial" parent="gun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.124832, 0 )

[node name="sight" parent="gun/Spatial3" instance=ExtResource( 1 )]

[node name="gun_drop" type="Spatial" parent="gun"]
transform = Transform( 100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0 )

[node name="mag_holder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.129463, -0.534896 )

[connection signal="pick_confirmed" from="." to="gun/RayCast" method="_on_hand_pick_confirmed"]
[connection signal="pick" from="gun/RayCast" to="." method="_on_RayCast_pick"]
[connection signal="timeout" from="gun/Timer" to="." method="_on_Timer_timeout"]

[editable path="gun/assault_rifle"]
